update BatchMetricsCollector, part 2